--- a/public/css/style.css
+++ b/public/css/style.css
@@ -407,7 +407,7 @@ label {
 	width: 30%;
 	min-width: 300px;
 	max-width: 350px;
-	margin: 1rem 1rem;
+	margin: 1rem 1.5rem;
 }
 
 .cardContent {
